--- a/LogisticForOrder/templates/LogisticForOrder/base.html
+++ b/LogisticForOrder/templates/LogisticForOrder/base.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     {% block CSS_Link %}
     {% endblock %}
-    <link rel="stylesheet" href="{% static 'ParcelStatusApp/style.css' %}">
+    <link rel="stylesheet" href="{% static 'LogisticForOrder/style.css' %}">
     <title>{% block title %}
     {% endblock %}</title>
   </head>
@@ -21,7 +21,7 @@
             <!-- Image and text -->
             <nav class="navbar navbar-dark bg-danger">
                 <a class="navbar-brand" href="/">
-               <img src="{% static 'ParcelStatusApp/icon/logo.png' %}">
+               <img src="{% static 'LogisticForOrder/icon/logo.png' %}">
                 </a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
