--- a/LogisticForOrder/templates/LogisticForOrder/homepage.html
+++ b/LogisticForOrder/templates/LogisticForOrder/homepage.html
@@ -1,4 +1,4 @@
-{% extends "ParcelStatusApp/base.html" %}
+{% extends "LogisticForOrder/base.html" %}
 {% load static %}
 {% block title %} 
 Home Page 
@@ -43,7 +43,7 @@ Home Page
 </div>
 {% endblock %}
 {% block CSS_Link %}
- <link rel="stylesheet" href="{% static 'ParcelStatusApp/homepage.css' %}">
+ <link rel="stylesheet" href="{% static 'LogisticForOrder/homepage.css' %}">
 {% endblock %}
 
 {% block JS %}
