--- a/LogisticForOrder/templates/LogisticForOrder/add_rate_card.html
+++ b/LogisticForOrder/templates/LogisticForOrder/add_rate_card.html
@@ -15,23 +15,19 @@ Home Page
         {{ form.courier.label_tag }}
         {{ form.courier }}
         {{ form.courier.errors }}
-        </div>
-        <div class="form-group">
         {{ form.from_destination.label_tag }}
         {{ form.from_destination| safe}}
         {{ form.from_destination.errors }}
-        </div>
-        <div class="form-group">
         {{ form.to.label_tag }}
         {{ form.to }}
         {{ form.to.errors }}
         </div>
+        
         <div class="form-group">
+        
         {{ form.min_two_kg_rate.label_tag }}
         {{ form.min_two_kg_rate }}
         {{ form.min_two_kg_rate.errors }}
-        </div>
-        <div class="form-group">
         {{ form.per_kilo_thereafter.label_tag }}
         {{ form.per_kilo_thereafter }}
         {{ form.per_kilo_thereafter.errors }}
@@ -39,7 +35,30 @@ Home Page
         <input type="submit" value=" Add ">
     </form>
     <hr>
-    
+    <table class="table table-striped">
+        <thead>
+          <tr>
+            <th scope="col">#</th>
+            <th scope="col">courier</th>
+            <th scope="col">From</th>
+            <th scope="col">To</th>
+            <th scope="col">Min - 2kg</th>
+            <th scope="col">Per Kilo thereafter</th>
+          </tr>
+        </thead>
+        <tbody>
+        {% for d in records %}
+          <tr>
+            <th scope="row"> {{ forloop.counter }}</th>
+            <td>{{d.courier}}</td>
+            <td>{{d.from_destination}}</td>
+            <td>{{d.to}}</td>
+            <td>R {{d.min_two_kg_rate}}</td>
+            <td>R {{d.per_kilo_thereafter}}</td>
+          </tr>
+        {% endfor %}
+        </tbody>
+      </table>
     <div  id="spinner" style=" left: 45%;display:None;
     position: absolute;
     top: 25%;">
