--- a/LogisticForOrder/templates/LogisticForOrder/add_rate_card.html
+++ b/LogisticForOrder/templates/LogisticForOrder/add_rate_card.html
@@ -55,7 +55,7 @@ Home Page
             <td>{{d.from_destination}}</td>
             <td>{{d.to}}</td>
             <td>{{d.courier.min_kg}}</td>
-            <td>R {{d.min_two_kg_rate}}</td>
+            <td>R {{d.min_kg_rate}}</td>
             <td>R {{d.per_kilo_thereafter}}</td>
           </tr>
         {% endfor %}
